DumbGame/css/master.css
body {
	color: #363636;
	background-color: #fff;
	font-family: 'Courier New';
	margin: 0;
	padding: 0;
}

#scoreboard {
	position: absolute;
	top: 60%;
	width: 100%;
	text-align: center;
	display: flex;
	flex-direction: column;
}

#scoreboard>ul{
	display: block;
	margin: auto;
	list-style: none;
	width: 100%;
	max-width: 400px;
}

#scoreboard>ul>li{
	padding: 5px 10px;
	width: 80%;
	height: 20px;
	display:flex;
	flex-direction: row;
	justify-content: space-between;
	margin: 10px;
	border: none;
	border-radius: 5px;
	max-width: 400px;
}

#scoreboard>ul>li.current-player{
	background-color: rgb(233, 233, 233);
	transform: scale(105%);
}

.list_pos{
	font-weight: bold;
	color: rgb(99, 99, 99);
}

/* .list_name{
	color: red;
}

.list_score{
	color: blue
} */

img{
	position: absolute;
	width: 400px;
	left: 50%;
	transform: translateX(-50%);
	z-index: -1;
}

#score-container{
	position: absolute;
	left: 50%;
	bottom: 55%;
	transform: translateX(-50%);
	display: flex;
	flex-direction: column;
	text-align: center;
}

#score{
	font-size: 70pt;
	color: black;
}

#button-div{
	display: flex;
}

#button-div>button{
	border:none;
	padding: 7px;
}

#left{
	border-radius: 10px 0 0 10px;
	/* background-color: rgb(105, 105, 105); */
	width: 40px;
	/* color: white; */
}

#right{
	border-radius: 0 10px 10px 0;
	/* background-color: rgb(105, 105, 105); */
	/* color: white; */
	width: 40px;
}

#send{
	background-color: rgb(216, 216, 216);
}

